--- a/training.automation.appium/packages.config
+++ b/training.automation.appium/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net461" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="Microsoft.CodeCoverage" version="16.1.1" targetFramework="net461" />
+  <package id="Microsoft.NET.Test.Sdk" version="16.1.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
