--- a/training.automation.winium/packages.config
+++ b/training.automation.winium/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
+  <package id="Microsoft.CodeCoverage" version="16.1.1" targetFramework="net461" />
+  <package id="Microsoft.NET.Test.Sdk" version="16.1.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
