--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ Thumbs.db
 /training.automation.appium/training.automation.appium.csproj.user
 /training.automation.selenium.specflow/TestRuns/TestRun_04.06.19
 /training.automation.appium/TestRuns/What happens on failure/LogIn/FailureScreenshots
+/training.automation.winium/TestRuns/What happens on failure/Calculator/FailureScreenshots
