--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ Thumbs.db
 /training.automation.selenium.specflow/TestRuns/TestRun_04.06.19
 /training.automation.appium/TestRuns/What happens on failure/LogIn/FailureScreenshots
 /training.automation.winium/TestRuns/What happens on failure/Calculator/FailureScreenshots
+/training.automation.selenium.specflow/TestRuns
