--- a/training.automation.api/training.automation.api.csproj
+++ b/training.automation.api/training.automation.api.csproj
@@ -76,9 +76,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\TrelloApiData.cs" />
-    <Compile Include="Data\TrelloBoardApiData.cs" />
-    <Compile Include="Data\TrelloResponseData.cs" />
     <Compile Include="Test\CSharp\Runner\TestRunner.cs" />
     <Compile Include="Test\CSharp\StepDefinitions\TrelloSearchSteps.cs" />
     <Compile Include="Test\Features\TrelloSearch.feature.cs">
@@ -87,7 +84,6 @@
       <DependentUpon>TrelloSearch.feature</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\TrelloAPIHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\training.automation.common\training.automation.common.csproj">
@@ -103,7 +99,9 @@
       <LastGenOutput>TrelloSearch.feature.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
