--- a/training.automation.common/training.automation.common.csproj
+++ b/training.automation.common/training.automation.common.csproj
@@ -113,9 +113,7 @@
     <Compile Include="Appium\Elements\InputBox.cs" />
     <Compile Include="Appium\Elements\Text.cs" />
     <Compile Include="Page\Page.cs" />
-    <Compile Include="Pop-up\Pop-up.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Section\Section.cs" />
     <Compile Include="Selenium\Elements\Button.cs" />
     <Compile Include="Selenium\Elements\Image.cs" />
     <Compile Include="Selenium\Elements\InputBox.cs" />
@@ -127,13 +125,16 @@
     <Compile Include="Utilities\AppiumHelper.cs" />
     <Compile Include="Utilities\Data\DriverType.cs" />
     <Compile Include="Utilities\Data\TrelloWebData.cs" />
+    <Compile Include="Utilities\Data\Trello\TrelloApiData.cs" />
+    <Compile Include="Utilities\Data\Trello\TrelloBoardApiData.cs" />
+    <Compile Include="Utilities\Data\Trello\TrelloResponseData.cs" />
     <Compile Include="Utilities\RandomGen.cs" />
     <Compile Include="Utilities\RuntimeTestData.cs" />
     <Compile Include="Utilities\SeleniumHelper.cs" />
     <Compile Include="Selenium\Elements\Common\Element.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\StringOverride.cs" />
     <Compile Include="Utilities\TestHelper.cs" />
+    <Compile Include="Utilities\TrelloAPIHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
