--- a/training.automation.common/packages.config
+++ b/training.automation.common/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net461" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net461" />
+  <package id="Gurock.Testrail" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.CodeCoverage" version="16.1.1" targetFramework="net461" />
   <package id="Microsoft.NET.Test.Sdk" version="16.1.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
