--- a/training.automation.common/training.automation.common.csproj
+++ b/training.automation.common/training.automation.common.csproj
@@ -59,6 +59,9 @@
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.3.1\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Gurock.Testrail, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Gurock.Testrail.1.0.1\lib\net45\Gurock.Testrail.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.CodeCoverage.Shim, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeCoverage.16.1.1\lib\net45\Microsoft.VisualStudio.CodeCoverage.Shim.dll</HintPath>
     </Reference>
@@ -90,10 +93,17 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Reflection" />
+    <Reference Include="System.Runtime" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -124,6 +134,7 @@
     <Compile Include="Tests\TestLogger.cs" />
     <Compile Include="Utilities\AppiumHelper.cs" />
     <Compile Include="Utilities\Data\DriverType.cs" />
+    <Compile Include="Utilities\Data\TestRailUser.cs" />
     <Compile Include="Utilities\Data\TrelloWebData.cs" />
     <Compile Include="Utilities\Data\Trello\TrelloApiData.cs" />
     <Compile Include="Utilities\Data\Trello\TrelloBoardApiData.cs" />
@@ -134,6 +145,7 @@
     <Compile Include="Selenium\Elements\Common\Element.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\TestHelper.cs" />
+    <Compile Include="Utilities\TestRail.cs" />
     <Compile Include="Utilities\TrelloAPIHelper.cs" />
   </ItemGroup>
   <ItemGroup>
